PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/Qualification__c.object-meta.xml
<CustomObject>
    <label>자격사항</label>
    <nameField>
        <label>자격명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>