PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/AcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionDate__c</fullName>
    <label>취득일자</label>
    <type>Date</type>
</CustomField>