PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/Allowance__c.field-meta.xml
<CustomField>
    <fullName>Allowance__c</fullName>
    <label>수당</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KRW 200,000</fullName>
            </value>
            <value>
                <fullName>KRW 50,000</fullName>
            </value>
            <value>
                <fullName>KRW 30,000</fullName>
            </value>
            <value>
                <fullName>KRW 20,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>