PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/CertificationName__c.field-meta.xml
<CustomField>
    <fullName>CertificationName__c</fullName>
    <label>자격증</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IssuingAuthority__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Certificate</valueSetName>
    </valueSet>
</CustomField>