PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>만료일자</label>
    <type>Date</type>
</CustomField>