PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/IsFiles__c.field-meta.xml
<CustomField>
    <fullName>IsFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>파일 첨부</label>
    <type>Checkbox</type>
</CustomField>