PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/IssuingAuthority__c.field-meta.xml
<CustomField>
    <fullName>IssuingAuthority__c</fullName>
    <label>발급기관</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>산업인력관리공단</fullName>
            </value>
            <value>
                <fullName>한국데이터산업진흥원</fullName>
            </value>
            <value>
                <fullName>한국정보통신진흥협회</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>