PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/IssuingAuthorityOld__c.field-meta.xml
<CustomField>
    <fullName>IssuingAuthorityOld__c</fullName>
    <label>발급기관(삭제예정)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>