PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/fields/OtherCertification__c.field-meta.xml
<CustomField>
    <fullName>OtherCertification__c</fullName>
    <inlineHelpText>기타 자격증도 발급기관/자격명을 기입</inlineHelpText>
    <label>기타 자격증 설명</label>
    <type>TextArea</type>
</CustomField>