PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/validationRules/NoSaveExpirationDateNull.validationRule-meta.xml
<ValidationRule>
    <fullName>NoSaveExpirationDateNull</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT( IssuingAuthority__c ) = &apos;Salesforce&apos;,
NOT(OR(
TEXT(CertificationName__c) = &apos;Application Architect&apos;,
TEXT(CertificationName__c) = &apos;B2B Solution Architect&apos;,
TEXT(CertificationName__c) = &apos;B2C Solution Architect&apos;,
TEXT(CertificationName__c) = &apos;System Architect&apos;,
TEXT(CertificationName__c) = &apos;Technical Architect&apos;)),
ISNULL( ExpirationDate__c )
)</errorConditionFormula>
    <errorMessage>만료일자를 반드시 넣어주세요.</errorMessage>
</ValidationRule>