PA_Education/TestMenifest/force-app/main/default/objects/Qualification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>CertificationName__c</columns>
    <columns>AcquisitionDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IsFiles__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>